autotests/testremoterunner.cpp
@@ -57,6 +57,19 @@ RemoteMatches TestRemoteRunner::Match(const QString &searchTerm)
         m.properties[QStringLiteral("icon-data")] = QVariant::fromValue(serializeImage(icon));
 
         ms << m;
+    } else if (searchTerm.startsWith(QLatin1String("fooDelay"))) {
+        // This special query string "fooDelayNNNN" allows us to introduce a desired delay
+        // to simulate a slow query
+        const int requestedDelayMs = searchTerm.mid(8).toInt();
+        RemoteMatch m;
+        m.id = QStringLiteral("id3");
+        m.text = QStringLiteral("Match 1");
+        m.iconName = QStringLiteral("icon1");
+        m.type = Plasma::QueryMatch::ExactMatch;
+        m.relevance = 0.8;
+        m.properties[QStringLiteral("actions")] = QStringList(QStringLiteral("action1"));
+        QThread::msleep(requestedDelayMs);
+        ms << m;
     } else if (searchTerm.contains(QLatin1String("foo"))) {
         RemoteMatch m;
         m.id = QStringLiteral("id1");
